// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile ba portrait medium 1`] = `
<Link
  linkStyle={
    Object {
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.7777777777777777}
    fill={true}
    style={
      Object {
        "flex": 1,
      }
    }
    uri="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
  />
  <View
    style={
      Object {
        "flex": 1,
        "paddingTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Regular",
          "fontSize": 19,
          "fontWeight": "normal",
          "includeFontPadding": false,
          "lineHeight": 19,
          "marginBottom": 10,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;

exports[`tile ba portrait wide 1`] = `
<Link
  linkStyle={
    Object {
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.7777777777777777}
    fill={true}
    style={
      Object {
        "flex": 1,
      }
    }
    uri="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
  />
  <View
    style={
      Object {
        "flex": 1,
        "paddingTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Regular",
          "fontSize": 22,
          "fontWeight": "normal",
          "includeFontPadding": false,
          "lineHeight": 22,
          "marginBottom": 10,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;
